--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Vitrax Project</title>
   </head>
   <body>
-    <a>Bienvenue</a>
-    <a>Voici le projet vitrax</a>
+    <p>Bienvenue</p>
+    <p>Voici le projet vitrax</p>
   </body>
 </html>
