--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <p>Bienvenue</p>
     <p>Voici le projet vitrax</p>
+    <p href="https://discord.com/oauth2/authorize?client_id=915181764161458176&scope=bot&permissions=8">Inviter Vitrax version : Alpha</p>
   </body>
 </html>
