--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <p>Bienvenue</p>
     <p>Voici le projet vitrax</p>
     <a href="https://discord.com/oauth2/authorize?client_id=915181764161458176&scope=bot&permissions=8">Inviter Vitrax version : Alpha</a>
+    <a href="https://discord.com/oauth2/authorize?client_id=888423456289472522&scope=bot&permissions=1099511627775">Inviter Vitrax version : Normale</a>
   </body>
 </html>
