--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Vitrax Project</title>
   </head>
   <body>
+    <a href="https://arexio.ml">Home</a>
     <p>Bienvenue</p>
     <p>Voici le projet vitrax</p>
     <a href="https://discord.com/oauth2/authorize?client_id=915181764161458176&scope=bot&permissions=8">Inviter Vitrax version : Alpha</a>
